--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load allauth i18n %}
 
+{% block extended_title %}| Sign Up{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative py-4 bg-gray">
     <div class="text-uppercase col-12">
