--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extended_title %}| Home{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
   <img src="/static/images/hero.jpg" alt="Hero Image" class="h-100 w-100 hero-image">
