--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extended_title %}| Merch{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative py-4 bg-gray" id="our-merch-section">
   <div class="text-center text-uppercase col-12" id="our-merch-content">
