--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extended_title %}| About{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
   <img src="/static/images/about/about-hero.jpg" alt="About Hero Image" class="h-100 w-100 hero-image">
