--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extended_title %}| Taproom{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
     <img src="/static/images/taproom/taproom-hero.jpg" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
