--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
               <i class="fa-solid fa-magnifying-glass fa-lg"></i>
             </a>
             <div class="dropdown-menu border-black rounded-0" aria-labelledby="search-bar">
-              <form class="form" method="GET" action="">
+              <form class="form" method="GET" action="{% url 'search' %}">
                 <div class="input-group w-100 px-2">
                   <input type="text" class="form-control border rounded-0" name="q" placeholder="Search the store!">
                   <div class="input-group-apend">
@@ -201,7 +201,7 @@
     {% block content %}
     {% endblock %}
 
-    <!-- Age Verification Modal (from digital.ink/blog/age-verification-modal/) -->
+    <!-- Age Verification Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content rounded-0 text-center text-uppercase bg-gray">
