Updated styling and functionality for search feature and added messages

--- a/inventory/templates/inventory/search_results.html
+++ b/inventory/templates/inventory/search_results.html
@@ -1,39 +1,65 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2>Search Results for "{{ query }}"</h2>
+<div class="overflow-hidden position-relative py-4 my-0 bg-gray">
+    <h3 class="mx-3">Search Results for "{{ query }}"</h3>
+</div>
 
-    {% if beers %}
-        <h3>Beers</h3>
-        <ul class="list-group mb-4">
-        {% for beer in beers %}
-            <li class="list-group-item">
-                <a href="{% url 'beer_detail' beer.id %}">{{ beer.name }}</a>
-                <p>{{ beer.description|truncatewords:30 }}</p>
-                <p><strong>Type:</strong> {{ beer.type }}</p>
-                <p><strong>Price:</strong> {{ beer.price }}</p>
-            </li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No beers found.</p>
-    {% endif %}
+<div class="overflow-hidden position-relative pt-4">
+    <div class="text-center text-uppercase col-12">
+        <h3 class="mb-3">Beers</h3>
+        <hr class="bg-black my-0">
+        <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
+            {% if beers %}
+            {% for beer in beers %}
+            <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mb-4">
+                <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray mx-4">
+                    <div class="card border-0 align-items-center">
+                        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image"
+                            alt="{{ beer.name }}">
+                        <div class="card-body p-0">
+                            <h5 class="card-title my-0">{{ beer.name }}</h5>
+                            <p class="card-text mb-2">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+                            <hr class="bg-black my-0">
+                            <p class="card-text mt-2">£{{ beer.price }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p>No beers found.</p>
+            {% endif %}
+        </div>
+    </div>
+</div>
 
-    {% if merch_items %}
-        <h3>Merchandise</h3>
-        <ul class="list-group mb-4">
-        {% for item in merch_items %}
-            <li class="list-group-item">
-                <a href="{% url 'merch_detail' item.id %}">{{ item.name }}</a>
-                <p>{{ item.description|truncatewords:30 }}</p>
-                <p><strong>Category:</strong> {{ item.category }}</p>
-                <p><strong>Price:</strong> {{ item.price }}</p>
-            </li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No merchandise found.</p>
-    {% endif %}
+
+<div class="overflow-hidden position-relative pb-4" id="merch-section">
+    <div class="text-center text-uppercase col-12" id="merch-content">
+        <h3 class="mb-3">Merch</h3>
+        <hr class="bg-black my-0">
+        <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
+            {% if merch_items %}
+            {% for merch_item in merch_items %}
+            <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mb-4">
+                <a href="{% url 'merch_detail' merch_item.id %}" class="text-black hover-gray mx-4">
+                    <div class="card border-0 align-items-center">
+                        <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image"
+                            alt="{{ merch_item.name }}">
+                        <div class="card-body p-0">
+                            <h5 class="card-title mb-2">{{ merch_item.name }}</h5>
+                            <hr class="bg-black my-0">
+                            <p class="card-text mt-2">£{{ merch_item.price }}</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p>No merchandise found.</p>
+            {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
