--- a/templates/base.html
+++ b/templates/base.html
@@ -189,12 +189,25 @@
         </ul>
       </div>
     </nav>
-  </header>
 
-  <!-- Messages Block -->
-  {% if messages %}
-  <div class="notification-container"></div>
-  {% endif %}
+    <!-- Messages -->
+    {% if messages %}
+    <div id="messages-container" class="row w-100 position-fixed bg-gray">
+      <div class="mx-auto col-12 col-lg-6">
+        {% for message in messages %}
+        <div class="d-flex justify-content-between alert alert-dismissible fade show {{ message.tags }} py-2 px-0 m-0" role="alert">
+          <p class="my-0">
+            {{ message | safe }}
+          </p>
+          <button type="button" class="btn-close border-0" data-bs-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">X</span>
+          </button>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endif %}
+  </header>
 
   <main>
     <!-- Content Block -->
