Added filtering to beers view

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,7 +31,7 @@
       </div>
       {% endfor %}
     </div>
-    <a class="btn-gray" href="{% url 'beers' %}">Shop Now</a>
+    <a class="btn-gray" href="{% url 'beers' %}?limited_edition=True">Shop Now</a>
   </div>
 </div>
 
