--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -13,9 +13,9 @@
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           <img src="{{ random_apparel.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_apparel.name }}">
           <div class="card-body py-0 my-3">
-            <h5 class="card-title mb-2">Apparel & Accesories</h5>
+            <h5 class="card-title mb-2">Apparel & Accessories</h5>
             <p class="card-text">Show off your love for Alchemy Aleworks with our stylish and practical gear. Perfect for any fan, our apparel and accessories combine comfort and functionality, allowing you to represent your favourite brewery wherever you go.</p>
-            <a class="btn-gray" href="#">Shop Now</a>
+            <a class="btn-gray" href="{% url 'merch' %}?category=apparel%20%26%20accessories">Shop Now</a>
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <div class="card-body py-0 my-3">
             <h5 class="card-title mb-2">Drinkware</h5>
             <p class="card-text">Enhance your drinking experience with our specially designed items. Crafted to complement our brews, these pieces are perfect additions to any home bar, ensuring every sip is enjoyed to the fullest</p>
-            <a class="btn-gray" href="#">Shop Now</a>
+            <a class="btn-gray" href="{% url 'merch' %}?category=drinkware">Shop Now</a>
           </div>
         </div>
       </div>
@@ -35,6 +35,7 @@
 
 <div class="overflow-hidden position-relative py-4" id="merch-section">
   <div class="text-center text-uppercase col-12" id="merch-content">
+    <h3 class="mb-3">{{ title }}</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
       {% for merch_item in merch %}
