Added shopping bag app, view and template

--- a/inventory/templates/inventory/search_results.html
+++ b/inventory/templates/inventory/search_results.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block extended_title %}| Search Results{% endblock %}
+
 {% block content %}
 <div class="overflow-hidden position-relative py-4 my-0 bg-gray">
     <h3 class="mx-3">Search Results for "{{ query }}"</h3>
