--- a/templates/base.html
+++ b/templates/base.html
@@ -150,7 +150,7 @@
             </div>
           </li>
           <li class="list-inline-item p-0 m-0">
-            <a class="text-black nav-link nav-action" href="#"></a><i class="fa-solid fa-cart-shopping fa-lg"></i>
+            <a class="text-black nav-link nav-action" href="{% url 'view_bag' %}"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
           </li>
         </ul>
       </div>
