Added contexts and delivery logic to bag app

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
     <!-- Promo Banner -->
     <div id="promo-banner" class="row text-center">
       <div class="col text-white align-items-center justify-content-center">
-        <p class="text-uppercase font-weight-normal p-0 m-0">Free delivery when you spend £30 or more!</p>
+        <p class="text-uppercase font-weight-normal p-0 m-0">Free delivery when you spend £{{ free_delivery_threshold }} or more!</p>
       </div>
     </div>
 
