--- a/inventory/templates/inventory/merch_detail.html
+++ b/inventory/templates/inventory/merch_detail.html
@@ -23,11 +23,12 @@
             <p class="card-text">£{{ merch.price }}</p>
           </div>
           <div class="card-body p-0 mb-3 d-flex align-items-center">
-            <form action="#" method="post" class="d-flex align-items-center flex-wrap">
+            <form action="{% url 'add_to_bag' merch.id %}" method="POST" class="d-flex align-items-center flex-wrap">
               {% csrf_token %}
               <p class="card-text text-uppercase my-0">Quantity:</p>
-              <input class="form-control rounded-0 border-black mx-3" type="number" name="quantity" value="1" min="1" style="width: 60px;">
-              <button type="submit" class="btn-gray form-control-button mx-0">Add to Cart</button>
+              <input class="form-control rounded-0 border-black mx-3" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ merch.id }}" id="id_qty_{{ merch.id }}" style="width: 60px;">
+              <input type="submit" class="btn-gray form-control-button mx-0" value="Add to Cart">
+              <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </form>
           </div>
         </div>
