--- a/inventory/templates/inventory/beer_detail.html
+++ b/inventory/templates/inventory/beer_detail.html
@@ -27,7 +27,7 @@
             <p class="card-text">£{{ beer.price }}</p>
           </div>
           <div class="card-body p-0 mb-3 d-flex align-items-center">
-            <form action="{% url 'add_to_bag' beer.id %}" method="POST" class="d-flex align-items-center flex-wrap">
+            <form action="{% url 'add_to_bag' 'beer' beer.id %}" method="POST" class="d-flex align-items-center flex-wrap">
               {% csrf_token %}
               <p class="card-text text-uppercase my-0">Quantity:</p>
               <input class="form-control rounded-0 border-black mx-3" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ beer.id }}" id="id_qty_{{ beer.id }}" style="width: 60px;">
