Added product count to nav bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,6 +146,7 @@ hr {
 .hover-gray:hover {
     color: #545454 !important;
     text-decoration: none;
+    border: none !important;
 }
 
 .text-black {
