--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
           <li class="list-inline-item p-0 m-0">
             <a class="text-black nav-link nav-action hover-gray" href="{% url 'view_bag' %}">
               <i class="fa-solid fa-cart-shopping fa-lg"></i>
-              <span>
+              <span class="align-middle font-weight-normal">
                 {% if product_count %}
                   {{ product_count }}
                 {% endif %}
