--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -9,64 +9,71 @@
     <h3 class="mb-3">Shopping Bag</h3>
     <hr class="bg-black my-0">
     {% if bag_items %}
-      <div class="table-responsive rounded col-12 offset-xl-2 col-xl-8 p-0">
-        <table class="table table-sm table-borderless">
-          <thead class="text-black">
-            <tr class="text-small">
-              <th scope="col">Product Info</th>
-              <th scope="col"></th>
-              <th scope="col">Qty</th>
-              <th scope="col text-right">Subtotal</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for item in bag_items %}
-              <tr>
-                <td class="p-3 col-4 col-md-3">
-                  <img class="img-fluid rounded" src="{{ item.product.image.url }}">
-                </td>
-                <td class="py-3 text-left col-md-7">
-                  <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                  {% if item.size %}
-                    <p class="my-0"><strong>Size: </strong>{{ item.size|upper }}</p>
-                  {% endif %}
-                  <p class="my-0 text-small font-weight-normal text-muted">SKU: {{ item.product.sku|upper }}</p>
-                </td>
-                <td class="py-3 col-md-1">
-                  <p class="my-0">{{ item.quantity }}</p>
-                </td>
-                <td class="py-3 text-right col-md-1">
-                  <!-- Price -->
-                  <p class="my-0">£{{ item.product.price }}</p>
-                  <!-- Subtotal -->
-                  <p class="my-0">£{{ item.item_total|floatformat:2 }}</p>
-                </td>
-              </tr>
-            {% endfor %}
-            <tr>
-              <td colspan="5" class="pt-5 text-right">
-                <h6><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
-                <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-                <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
-                {% if free_delivery_delta > 0 %}
-                  <p class="mb-1 text-danger">
-                    You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
-                  </p>
-                {% endif %}
-              </td>
-            </tr>
-            <tr>
-              <td colspan="5" class="text-right">
-                <a href="#" class="btn-gray m-0">
-                  <span>Secure Checkout <i class="fas fa-lock"></i></span>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="table-responsive rounded col-12 offset-xl-2 col-xl-8 p-0">
+      <table class="table table-sm table-borderless">
+        <thead class="text-black">
+          <tr class="text-small">
+            <th scope="col">Product Info</th>
+            <th scope="col"></th>
+            <th scope="col">Qty</th>
+            <th scope="col text-right">Subtotal</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in bag_items %}
+          <tr>
+            <td class="p-3 col-4 col-md-3">
+              <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+            </td>
+            <td class="py-3 text-left col-md-7">
+              <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+              {% if item.size %}
+              <p class="my-0"><strong>Size: </strong>{{ item.size|upper }}</p>
+              {% endif %}
+              <p class="my-0 text-small font-weight-normal text-muted">SKU: {{ item.product.sku|upper }}</p>
+            </td>
+            <td class="py-3 col-md-1">
+              <form action="{% url 'update_bag' item.item_type item.product.pk %}" method="POST">
+                  {% csrf_token %}
+                  <input type="hidden" name="item_id" value="{{ item.product.pk }}">
+                  <input type="hidden" name="item_type" value="{{ item.item_type }}">
+                  <input type="hidden" name="size" value="{{ item.size }}">
+                  <input type="number" name="quantity" value="{{ item.quantity }}" min="0">
+                  <button type="submit">Update</button>
+              </form>
+            </td>
+            <td class="py-3 text-right col-md-1">
+              <!-- Price -->
+              <p class="my-0">£{{ item.product.price }}</p>
+              <!-- Subtotal -->
+              <p class="my-0">£{{ item.item_total|floatformat:2 }}</p>
+            </td>
+          </tr>
+          {% endfor %}
+          <tr>
+            <td colspan="5" class="pt-5 text-right">
+              <h6><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
+              <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+              <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+              {% if free_delivery_delta > 0 %}
+              <p class="mb-1 text-danger">
+                You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
+              </p>
+              {% endif %}
+            </td>
+          </tr>
+          <tr>
+            <td colspan="5" class="text-right">
+              <a href="#" class="btn-gray m-0">
+                <span>Secure Checkout <i class="fas fa-lock"></i></span>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     {% else %}
-      <p class="mt-3 mb-0">Your bag is empty.</p>
+    <p class="mt-3 mb-0">Your bag is empty.</p>
     {% endif %}
   </div>
 </div>
