--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
 
   <!-- Additional JS -->
   {% block additional_js %}
+  <script src="{% static 'js/scroll_position.js' %}"></script>
   {% endblock %}
 
   <!-- Page Title -->
@@ -203,7 +204,17 @@
   {% if messages %}
   <div id="messages-container" class="fixed-top bg-transparent w-100">
     {% for message in messages %}
-    {% include 'includes/toasts/toast_success.html' %}
+      {% if message.tags %}
+        {% if 'error' in message.tags %}
+          {% include 'includes/toasts/toast_error.html' %}
+        {% elif 'info' in message.tags %}
+          {% include 'includes/toasts/toast_info.html' %}
+        {% elif 'success' in message.tags %}
+          {% include 'includes/toasts/toast_success.html' %}
+        {% elif 'warning' in message.tags %}
+          {% include 'includes/toasts/toast_warning.html' %}
+        {% endif %}
+      {% endif %}
     {% endfor %}
   </div>
   {% endif %}
