--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -43,7 +43,7 @@
         <!-- Preserve category parameter -->
         <input type="hidden" name="category" value="{{ request.GET.category }}">
         <label for="sort_by" class="form-label visually-hidden my-0">Sort by:</label>
-        <select name="sort_by" id="sort_by" class="text-muted font-weight-normal text-right form-select border-0" onchange="this.form.submit()">
+        <select name="sort_by" id="sort_by" class="text-muted font-weight-normal text-right form-select border-0">
           <option value="name_asc" {% if request.GET.sort_by == 'name_asc' %}selected{% endif %}>Name Ascending</option>
           <option value="name_desc" {% if request.GET.sort_by == 'name_desc' %}selected{% endif %}>Name Descending</option>
           <option value="price_asc" {% if request.GET.sort_by == 'price_asc' %}selected{% endif %}>Price Ascending</option>
