--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,14 +26,27 @@
             <td class="p-3 col-4 col-md-3">
               <img class="img-fluid rounded" src="{{ item.product.image.url }}">
             </td>
-            <td class="py-3 text-left col-md-7">
-              <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-              {% if item.size %}
-              <p class="my-0"><strong>Size: </strong>{{ item.size|upper }}</p>
-              {% endif %}
-              <p class="my-0 text-small font-weight-normal text-muted">SKU: {{ item.product.sku|upper }}</p>
+            <td class="py-3 text-left d-flex justify-content-between">
+              <div>
+                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                {% if item.size %}
+                <p class="my-0"><strong>Size: </strong>{{ item.size|upper }}</p>
+                {% endif %}
+                <p class="my-0 text-small font-weight-normal text-muted">SKU: {{ item.product.sku|upper }}</p>
+              </div>
+              <div class="mx-md-2">
+              <!-- Delete button -->
+                <form action="{% url 'update_bag' item.item_type item.product.pk %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="item_id" value="{{ item.product.pk }}">
+                    <input type="hidden" name="item_type" value="{{ item.item_type }}">
+                    <input type="hidden" name="size" value="{{ item.size }}">
+                    <input type="hidden" name="quantity" value="0">
+                    <button type="submit" class="form-control btn-danger text-small rounded-0">&times;</button>
+                </form>
+              </div>
             </td>
-            <td class="py-3 col-md-1">
+            <td class="py-3 col-1">
               <form action="{% url 'update_bag' item.item_type item.product.pk %}" method="POST">
                   {% csrf_token %}
                   <input type="hidden" name="item_id" value="{{ item.product.pk }}">
@@ -43,7 +56,7 @@
                   <button class="bg-transparent border-0 text-primary text-small" type="submit">Update</button>
               </form>
             </td>
-            <td class="py-3 text-right col-md-1">
+            <td class="py-3 text-right col-1">
               <!-- Price -->
               <p class="my-0">£{{ item.product.price }}</p>
               <!-- Subtotal -->
