Added checkout template and view

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -78,7 +78,7 @@
           </tr>
           <tr>
             <td colspan="5" class="text-right">
-              <a href="#" class="btn-gray m-0">
+              <a href="{% url 'checkout' %}" class="btn-gray m-0">
                 <span>Secure Checkout <i class="fas fa-lock"></i></span>
               </a>
             </td>
