--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
   <script src="https://kit.fontawesome.com/20d4ac6c68.js" crossorigin="anonymous"></script>
   {% endblock %}
 
+  <!-- Stripe -->
+   <script src="https://js.stripe.com/v3/"></script>
+
   <!-- Age Verification Modal JS -->
   <script src="/static/js/age_verification_modal.js"></script>
 
